--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
+    <ion-title class="ion-text-center">
+      Account Details
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,45 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large" class="ion-text-center">Account Details</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <section class="ion-text-center">
+    <h3>
+    </h3>
+  </section>
+  <br>
+  <form [formGroup]="accountDetailsForm" (ngSubmit)="save()">
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Account Holder Name</ion-label>
+        <ion-input formControlName="name" inputmode="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Bank</ion-label>
+        <ion-input formControlName="bank" inputmode="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Account Number</ion-label>
+        <ion-input formControlName="accountNumber" inputmode="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Branch Code</ion-label>
+        <ion-input formControlName="branchCode" inputmode="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Phone</ion-label>
+        <ion-input formControlName="phoneNumber" type="tel"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input formControlName="email" inputmode="email"></ion-input>
+      </ion-item>
+    </ion-list>
+    <br>
+    <ion-button type="submit" expand="block">
+      Save
+      <ion-icon slot="end" name="create"></ion-icon>
+    </ion-button>
+  </form>
 </ion-content>
