--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -17,31 +17,32 @@
     </h3>
   </section>
   <br>
-  <form [formGroup]="accountDetailsForm" (ngSubmit)="save()">
+  <form (ngSubmit)="save()">
     <ion-list>
       <ion-item>
         <ion-label position="floating">Account Holder Name</ion-label>
-        <ion-input formControlName="name" inputmode="text"></ion-input>
+        <ion-input name="username" [(ngModel)]="details.username" type="text"></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating">Bank</ion-label>
-        <ion-input formControlName="bank" inputmode="text"></ion-input>
+        <ion-input name="bank" [(ngModel)]="details.bank" type="text"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Account Number</ion-label>
-        <ion-input formControlName="accountNumber" inputmode="text"></ion-input>
+        <ion-input name="accountNumber" [(ngModel)]="details.accountNumber" type="text"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Branch Code</ion-label>
-        <ion-input formControlName="branchCode" inputmode="text"></ion-input>
+        <ion-input name="branchCode" [(ngModel)]="details.branchCode" type="text"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Phone</ion-label>
-        <ion-input formControlName="phoneNumber" type="tel"></ion-input>
+        <ion-input name="phoneNumber" [(ngModel)]="details.phoneNumber" type="tel" ></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Email</ion-label>
-        <ion-input formControlName="email" inputmode="email"></ion-input>
+        <ion-input name="email" inputmode="email" [(ngModel)]="details.email" type="email"></ion-input>
       </ion-item>
     </ion-list>
     <br>
@@ -49,5 +50,6 @@
       Save
       <ion-icon slot="end" name="create"></ion-icon>
     </ion-button>
+    <pre>{{details | json}}</pre>
   </form>
 </ion-content>
