--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,9 +1,27 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>signup</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <br>
+  <ion-img src="assets/gold.png"></ion-img>
+  <form (ngSubmit)="login()">
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Email Address</ion-label>
+        <ion-input name="emailAddress" [(ngModel)]="user.emailAddress" type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input name="password" [(ngModel)]="user.password" type="password"></ion-input>
+      </ion-item>
+      <ion-item lines='none'>Already have an account? 
+        <a routerLink='/login'>Sign In</a>
+      </ion-item>
+    </ion-list>
+    <br>
+    <br>
+    <ion-button type="submit" routerLink="/application" expand="block">Sign up</ion-button>
+  </form>
 </ion-content>
