Removed unnecessary files

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -22,6 +22,6 @@
       </ion-item>
     </ion-list>
 <br>
-    <ion-button type="submit" routerLink="/application" expand="block">Login</ion-button>
+    <ion-button type="submit" expand="block">Login</ion-button>
   </form>
 </ion-content>
