--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -22,6 +22,6 @@
     </ion-list>
     <br>
     <br>
-    <ion-button type="submit" routerLink="/application" expand="block">Sign up</ion-button>
+    <ion-button type="submit" expand="block">Sign up</ion-button>
   </form>
 </ion-content>
