--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="dashboaard">
+    <ion-tab-button tab="dashboard">
       <ion-icon name="home"></ion-icon>
       <ion-label>Dashboard</ion-label>
     </ion-tab-button>
