--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,8 +10,8 @@
   <form (ngSubmit)="login()">
     <ion-list>
       <ion-item>
-        <ion-label position="floating">Email Address</ion-label>
-        <ion-input name="emailAddress" [(ngModel)]="user.emailAddress" type="email"></ion-input>
+        <ion-label position="floating">Phone Number</ion-label>
+        <ion-input name="phoneNumber" [(ngModel)]="user.phone_number" type="tel"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Password</ion-label>
