Added firebase signup

--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -6,7 +6,7 @@
 <ion-content>
   <br>
   <ion-img src="assets/gold.png"></ion-img>
-  <form (ngSubmit)="login()">
+  <form (ngSubmit)=" signUp(user.emailAddress, user.password)">
     <ion-list>
       <ion-item>
         <ion-label position="floating">Email Address</ion-label>
